--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ author:
 menu:
   - title:             About
     url:               /about/
+  - title:             Registration
+    url:               /registration/
   - title:             Program
     url:               /program/
   - title:             Plan your trip
